src/widgets/snapshots/tvision__widgets__scrollbar__tests__snapshot_horizontal_scrollbar_at_start.snap
---
source: src/widgets/scrollbar.rs
expression: screen.snapshot()
---
size: 20x1
cursor: hidden
text:
|◄■▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒►|
attr:
|aaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,170) bg=RGB(0,170,170)
